--- a/app/assets/components/elements/json-delete.html
+++ b/app/assets/components/elements/json-delete.html
@@ -1,33 +1,9 @@
-<polymer-element name="json-delete" attributes='result url data auto'>
+<polymer-element name=json-delete extends=json-req>
 
-  <template>
-    <core-ajax  id=request
-                auto={{auto}}
-                url={{url}}
-                handleAs="json"
-                contentType="application/json"
-                method="DELETE"
-                response={{result}}
-                body="{{data | json}}"
-                on-core-response={{success}}
-                on-core-error={{error}}
-                >
-    </core-ajax>
-  </template>
+    <script>
+        Polymer({
+            method: 'delete'
+        });
+    </script>
 
-  <script>
-    Polymer({
-      auto: false,
-      data: {},
-      go:function(){
-        this.$.request.go()
-      },
-      success:function(event,detail){
-        this.fire("success", detail.response);
-      },
-      error:function(event,detail){
-        this.fire("error", detail.xhr.responseText);
-      }
-    })
-  </script>
 </polymer-element>
