--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -67,6 +67,9 @@
           background-color: #efefef;
           color: black;
       }
+      .container.expanded {
+          padding-bottom: 6px;
+      }
       core-collapse {
           position: absolute;
           top: 0;
