--- a/app/assets/components/ui-elements/oj-main-menu.html
+++ b/app/assets/components/ui-elements/oj-main-menu.html
@@ -60,7 +60,7 @@
 
         // External API
 
-        pathChanged: function(path) {
+        routeChanged: function(path, pageInstance, route) {
             if (path=='/')
                 var page='home';
             else
