--- a/app/assets/components/oj-page-router.html
+++ b/app/assets/components/oj-page-router.html
@@ -3,8 +3,9 @@
 
         <app-router id=router
                     mode=pushstate
-                    on-activate-route-start={{validateOrRedirectUser}}
-                    on-before-data-binding={{bindExtraAttributes}}
+                    on-activate-route-start={{activateRouteStart}}
+                    on-before-data-binding={{beforeDataBinding}}
+                    on-activate-route-end={{activateRouteEnd}}
                     >
 
             <app-route path='/' element='oj-home-page' noAuth></app-route>
@@ -45,21 +46,21 @@
                 this.$.router.go(url);
             },
 
-            validateOrRedirectUser: function (event) {
-                var path = event.detail.path;
+            /////////////////////////////////////////////////////
+
+            validateOrRedirectUser: function (event, path, route) {
 
                 // Login not required
-                if (!this.loginRequired(event)) {
-                    this.fire('path-changed', path);
+                if (!this.loginRequired(route)) {
                     return true;
                 }
 
                 // Waiting for current user
                 if (!this.currentUserReady) {
                     event.preventDefault();
-                    setTimeout(function () {
+                    this.async(function () {
                         this.$.router.go(path, {replace: true});
-                    }.bind(this), 20);
+                    }.bind(this));
                     return false;
                 }
 
@@ -80,18 +81,45 @@
                 }
 
                 // login successful
-                this.fire('path-changed', path);
                 return true;
             },
 
-            loginRequired:          function (event) {
-                return !event.detail.route.hasAttribute('noAuth');
+            loginRequired: function (route) {
+                return !route.hasAttribute('noAuth');
             },
 
-            bindExtraAttributes:    function (event) {
-                event.detail.model.user        = this.currentUser;
-                event.detail.model.currentUser = this.currentUser;
+            bindExtraAttributes: function (model) {
+                model.user        = this.currentUser;
+                model.currentUser = this.currentUser;
+            },
+
+            pageInstanceForRoute: function(route) {
+                return route.children[route.children.length-1];
+            },
+
+            activateRouteStart: function (event, detail) {
+                var path = event.detail.path;
+                var route = event.detail.route;
+                return this.validateOrRedirectUser(event, path, route);
+            },
+
+            beforeDataBinding: function(event, detail) {
+                return this.bindExtraAttributes(detail.model);
+            },
+
+            activateRouteEnd: function (event, detail) {
+                var path         = detail.path;
+                var route        = detail.route;
+                var pageInstance = this.pageInstanceForRoute(route);
+
+                this.fire('route-changed', {
+                    path:         path,
+                    route:        route,
+                    pageInstance: pageInstance
+                });
+
             }
+
         });
   </script>
 
