#165: Redirect to editing, review, papers or submit page on initial load.

--- a/app/assets/components/oj-app.html
+++ b/app/assets/components/oj-app.html
@@ -14,11 +14,10 @@
 
       <core-toolbar tool flex>
         <div flex></div>
-        <oj-user-login user={{currentUser}} userReady={{currentUserReady}}></oj-user-login>
+        <oj-user-login on-user={{onUser}}></oj-user-login>
       </core-toolbar>
 
       <oj-page-router id=pages
-                      currentUserReady={{currentUserReady}}
                       on-route-changed={{onRouteChanged}}
                       currentUser={{currentUser}}
               ></oj-page-router>
@@ -58,6 +57,11 @@
         this.$.pages.go(url);
       },
 
+      onUser: function(event, user) {
+        this.currentUser = user;
+          this.$.pages.init();
+      },
+
       onRouteChanged: function(event, detail) {
           var $menu = this.shadowRoot.querySelector('#mainmenu');
           $menu.routeChanged(detail);
@@ -68,7 +72,6 @@
           this.$.notification.text = text;
           this.$.notification.show();
       }
-
 
     });
   </script>
