--- a/app/assets/components/ui-elements/oj-user-login.html
+++ b/app/assets/components/ui-elements/oj-user-login.html
@@ -1,13 +1,18 @@
-<polymer-element name="oj-user-login" attributes='user userReady'>
+<polymer-element name="oj-user-login">
   <template>
-    <template if="{{user.name != undefined}}">
-      <a class='link username' href='https://orcid.org/my-orcid' target='_blank' >
-          {{user.name}}{{user|roles}}</a>
-      <a class='link signout' href='/signout'>Sign Out</a>
-    </template>
 
-    <template if="{{user.name == undefined}}">
-      <a class='link' href='/auth/orcid'>Sign In</a>
+    <template if="{{userReady}}">
+
+        <template if={{user.name}}>
+          <a class='link username' href='https://orcid.org/my-orcid' target='_blank' >
+              {{user.name}}{{user|roles}}</a>
+          <a class='link signout' href='/signout'>Sign Out</a>
+        </template>
+
+        <template if={{!user.name}}>
+          <a class='link' href='/auth/orcid'>Sign In</a>
+        </template>
+
     </template>
 
     <core-ajax auto url='/api/user' handleAs="json"  on-core-response={{isReady}}></core-ajax>
@@ -44,11 +49,15 @@
       isReady:function(event){
         if(event.detail.response.name){
           this.user = event.detail.response;
+          window.current_user = this.user;
+          this.asyncFire('user-logged-in', this.user);
         }
         else{
           this.user = null;
+          this.asyncFire('user-logged-out');
         }
-        this.userReady=true;
+        this.asyncFire('user', this.user);
+        this.userReady = true;
       },
 
       roles: function(user) {
