#136: Scroll issues into view when opened or new comments are being added

--- a/app/assets/components/ui-elements/oj-annotation-comments.html
+++ b/app/assets/components/ui-elements/oj-annotation-comments.html
@@ -93,6 +93,7 @@
                 var edit = this.shadowRoot.querySelector('#replyTextArea');
                 edit.focus();
                 edit.select();
+                this.asyncFire('new-comment-shown');
             });
       },
 
