--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -14,7 +14,7 @@
     </div>
 
     <!-- Overlay this to get animated expansion to work nicely -->
-    <core-collapse id=collapsible opened={{annotation.open}}>
+    <core-collapse id=collapsible opened={{annotation.open}} on-core-resize={{annotationAfterOpen}}>
       <core-a11y-keys keys="esc" on-keys-pressed={{collapse}}></core-a11y-keys>
 
       <div class='container state-{{annotation.state}} expanded' >
@@ -27,7 +27,11 @@
                   <markdown-content class=issue markdown={{annotation.body}}></markdown-content>
               </div>
 
-              <oj-annotation-comments id=comments paper={{paper}} annotation={{annotation}}></oj-annotation-comments>
+              <oj-annotation-comments id=comments
+                                      paper={{paper}}
+                                      annotation={{annotation}}
+                                      on-new-comment-shown={{newCommentShown}}
+                      ></oj-annotation-comments>
           </template>
 
           <template if="{{annotation.new}}">
@@ -139,6 +143,40 @@
           this.collapse();
       },
 
+      scrollAnnotationIntoView: function(prioritize_top) {
+          if (!this.annotation.open)
+              return;
+
+          var spacing = 10 /*px*/ ;
+
+          var top     = this.offsetTop;
+          var height  = this.$.collapsible.offsetHeight;
+
+          var list = this.offsetParent;
+          if (list.tagName != 'OJ-ANNOTATION-LIST') console.error('annotation parent is not the oj-annotation-list');
+            console.log('>>>>>', top, height, list.offsetTop);
+          top = top + list.offsetTop;
+
+          var container = list.offsetParent;
+          if (container.id != 'mainContainer') console.error('annotation-list parent is not the #mainContainer');
+
+
+          if (prioritize_top && top < container.scrollTop) {
+              $(container).animate({scrollTop: top - spacing}, 500);
+
+          } else  if (top + height > container.scrollTop + container.offsetHeight ) {
+              var newTop = top + height + spacing - container.offsetHeight;
+              if (prioritize_top && top < newTop)
+                newTop = top;
+              $(container).animate({scrollTop: newTop }, 500);
+
+          } else if (!prioritize_top && top < container.scrollTop) {
+              $(container).animate({scrollTop: top - spacing}, 500);
+
+          }
+
+      },
+
       /**** polymer *******/
 
       observe: {
@@ -173,6 +211,12 @@
             this.expand();
         else
             this.collapse();
+      },
+      annotationAfterOpen: function(event, detail) {
+        this.scrollAnnotationIntoView(true);
+      },
+      newCommentShown: function(event) {
+          this.scrollAnnotationIntoView(false);
       },
       collapse: function() {
         this.annotation.open = false;
