--- a/app/assets/components/ui-elements/oj-review-page-actions.html
+++ b/app/assets/components/ui-elements/oj-review-page-actions.html
@@ -8,11 +8,11 @@
                   <core-icon icon=delete></core-icon>
                   Start Review
               </paper-button>
-              <paper-button id=delete raised hidden?="{{paper.state!='submitted'}}" on-tap="{{deleteClick}}" >
+              <paper-button id=delete raised hidden?="{{ptrue || paper.state=='submitted'}}" on-tap="{{deleteClick}}" >
                   <core-icon icon=arrow-forward></core-icon>
                   Delete Paper
               </paper-button>
-              <paper-button id=accept raised hidden?="{{paper.state!='review_completed'}}" on-tap="{{acceptClick}}" >
+              <paper-button id=accept raised hidden?="{{false && paper.state!='review_completed'}}" on-tap="{{acceptClick}}" >
                   <core-icon icon=thumb-up></core-icon>
                   Accept
               </paper-button>
@@ -29,8 +29,8 @@
               </paper-button>
           </template>
 
-          <template if="{{paper.current_role=='reviewer'}}">
-              <paper-button id=mark-review-complete raised hidden?="{{paper.state!='under_review' || paper.current_assignment.completed}}" on-tap="{{markReviewCompleteClick}}" >
+          <template if="{{ paper.current_role=='reviewer'}}">
+              <paper-button id=mark-review-complete raised hidden?="{{false && paper.state!='under_review' || paper.current_assignment.completed}}" on-tap="{{markReviewCompleteClick}}" >
                   <core-icon icon=check></core-icon>
                   Completed Review
               </paper-button>
@@ -85,11 +85,10 @@
         <paper-button dismissive autofocus>Cancel</paper-button>
     </paper-action-dialog>
 
-    <json-put    id=statusChangeRequest on-success={{statusChangeRequestSuccess}}></json-put>
-    <json-put    id=updateRequest       on-success={{updateRequestSuccess}}  on-error={{requestError}}></json-put>
-    <json-post   id=completedRequest    on-success={{completedRequestSuccess}}  on-error={{requestError}}></json-post>
-    <json-req    id=publicRequest       on-error={{requestError}}></json-req>
-    <json-delete id=deleteRequest       on-error={{requestError}}></json-delete>
+    <json-put  id=statusChangeRequest on-success={{statusChangeRequestSuccess}}></json-put>
+    <json-put  id=updateRequest       on-success={{updateRequestSuccess}}  on-error={{requestError}}></json-put>
+    <json-post id=completedRequest    on-success={{completedRequestSuccess}}  on-error={{requestError}}></json-post>
+    <json-req  id=publicRequest       on-error={{requestError}}></json-req>
 
   </template>
 
@@ -146,19 +145,20 @@
 
           this.showDialog(html, button, function() {
               var $request = this.$.publicRequest;
-              $request.url = Oj.urls.paperMakePublicPath(this.paper, make_public);
+              var url = Oj.urls.paperMakePublicPath(this.paper, make_public);
+              $request.url = url;
               $request.method = make_public ? 'post' : 'delete';
 
               $request.go(function(event, detail) {
                   var msg = make_public ? 'Your name has been made public.'
                                         : 'Your name has now been hidden';
-                  this.fire('notification', msg);
+                  this.fire('notificaion', msg);
                   this.paper = detail;
               }.bind(this) );
           });
       },
 
-      deleteClick: function() {
+      makePublicClick: function() {
         this.showDialog('Do you want to delete this paper?<br/>'+
                         'All versions of the paper will be permanently removed from the system.',
                         'Delete Paper', function() {
@@ -167,8 +167,8 @@
 
             $request.go(function(event, detail) {
                 var msg = 'The paper has been deleted';
-                this.fire('notification', msg);
-                this.fire('go', '/');
+                this.fire('notificaion', msg);
+                this.go('/');
             }.bind(this) );
         });
       },
